<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasterActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/msg"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="italic"
        android:background="#ffffff"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#f0f8ff">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumption"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_time"
            android:id="@+id/break_btn"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="Break"
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:id="@+id/break_id">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out"
                    android:padding="15dp"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </RadioGroup>

        </LinearLayout>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="15dp"/>
    </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/submit"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:text="this is where the success message will be displayed"
        />
</LinearLayout>