<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogIn"
    android:layout_gravity="center"
    android:background="@color/myLavender">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:inputType="textPersonName"
        android:textColor="@color/myBlack"
        app:errorEnabled="false">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userBtn"
            android:text="@string/user"
            android:background="@color/myGray"
            android:textColor="@color/myBlack"
            android:layout_marginRight="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adminBtn"
            android:textColor="@color/myBlack"
            android:background="@color/myGray"
            android:text="@string/admin"/>
    </LinearLayout>

</LinearLayout>